# SPL-flow

./: .gitignore  000_run_ui.sh  CLAUDE.md  GEMINI.md  README-TEST.md  README-TODO.md  README.md  claude-vs-gemini.md  pyproject.toml  readme-pinggy.md  requirements.txt  splflow.yaml
biz-dev/liquid_ai/: readme.md
config/: model_settings.yaml
dataset/math-cs-physics-zh/: README.md  questions.csv  results.csv  run_eval.py
dataset/math-cs-physics-zh/spl/: 001_physics.spl  002_physics.spl  003_physics.spl  004_physics.spl  005_physics.spl  006_physics.spl  007_physics.spl  008_physics.spl  (+182 more)
docs/: DESIGN-logical-chunking.md
docs/startup/: architecture.md  claude-chat-20260214.html  claude-chat-20260214.md  openrouter-models-20260216.txt  openrouter-models.csv  parse-openrouter-models.py  picoflow_design.md  pocketflow_review.md  spl-notebook.md  vision.md
experiments/: README-experiments.md  chunking_transformer.spl  chunking_transformer_ollama.spl  claude-20260220.html  claude-20260221.html  run_text2spl.py  spl_runner.py
logs/: .gitkeep
src/: __init__.py  api.py  app.py  cli.py  config.py
src/db/: sqlite_store.py
src/flows/: __init__.py  benchmark_flow.py  chunking_flow.py  spl_flow.py
src/nodes/: __init__.py  benchmark.py  deliver.py  execute_spl.py  text2spl.py  validate_spl.py
src/pages/: 2_RAG_Store.py  3_Benchmark.py
src/rag/: __init__.py  chroma_store.py  factory.py  faiss_store.py  store.py
src/utils/: __init__.py  budget_optimizer.py  chunk_spl_builder.py  chunker.py  logging_config.py  model_catalog.py  model_catalog_old.py  model_router.py  page_helpers.py  spl_templates.py
tests/: README-TEST.md  test_chunk_spl_builder.py  test_chunker.py  test_chunking_flow.py
(+20 files in other folders)
